# fast_sweeping

./: .gitignore  Cargo.toml  README.md  README.tpl
benches/: bench.rs  crit.rs
capi/: Cargo.toml
capi/src/: lib.rs  macros.rs
examples/: accel_mean_curv.rs  circle.rs  circle_iteration.rs  error.rs  hausdorff_distance.rs  hausdorff_distance_3d.rs  line.rs  plot3d.rs  redistance.rs
python/: README.md  setup.py
python/fast_sweeping/: __init__.py
src/: dist.rs  eikonal.rs  level_set.rs  lib.rs  norm.rs
