[package]
authors = ["Norbert Pozar <bertapozar@gmail.com>"]
license = "MIT"
name = "fast_sweeping"
version = "0.0.1"

[dependencies]

[dev-dependencies]
rustc-serialize = "0.3.19"
docopt = "0.6.86"
gnuplot = "0.0.21"
ndarray = "0.9.0"
pbr = "1.0.0"
quickcheck = "0.2.27"

[dev-dependencies.isosurface]
git = "https://github.com/rekka/isosurface-rs.git"
