[package]
authors = ["Norbert Pozar <bertapozar@gmail.com>"]
license = "MIT"
name = "fast_sweeping"
version = "0.0.1"
autobenches = false

[dependencies]
ndarray = "0.12"

[dependencies.isosurface]
git = "https://github.com/rekka/isosurface-rs.git"

[dev-dependencies]
rustc-serialize = "0.3.19"
docopt = "0.6.86"
gnuplot = "0.0.21"
pbr = "1.0.0"
quickcheck = "0.2.27"
criterion = { version = "0.2", default-features = false }

[[bench]]
name = "bench"
harness = false
